apps/query-derive/tests/ui/map_missing_derive.stderr
error[E0277]: `Translations` is not a valid map for a `flusso_query::kind::Text` field
  --> tests/ui/map_missing_derive.rs:14:12
   |
14 |     title: Translations,
   |            ^^^^^^^^^^^^ unsupported map type
   |
help: the trait `FlussoMap<flusso_query::kind::Text>` is not implemented for `Translations`
  --> tests/ui/map_missing_derive.rs:8:1
   |
 8 | struct Translations(HashMap<String, String>);
   | ^^^^^^^^^^^^^^^^^^^
   = note: use `HashMap<String, V>` with a `flusso_query::kind::Text` value type, or add `#[derive(FlussoMap)]` (with the matching kind) to `Translations`
help: the trait `FlussoMap<K>` is implemented for `HashMap<std::string::String, V>`
  --> $WORKSPACE/apps/query/src/handles/mod.rs
   |
   | impl<K, V: FlussoValue<K>> FlussoMap<K> for std::collections::HashMap<String, V> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `__assert_field_map`
  --> tests/ui/map_missing_derive.rs:14:12
   |
14 |     title: Translations,
   |            ^^^^^^^^^^^^ required by this bound in `__assert_field_map`
